--- a/per-page.html
+++ b/per-page.html
@@ -51,7 +51,7 @@
       <table>
         <thead>
           <tr>
-            <th>Serial Number</th>
+            <th>S. No.</th>
             <th>Goals</th>
             <th>Status</th>
           </tr>
@@ -87,7 +87,7 @@
     </div>
 
     <div class="media-section">
-      <h2>Favorite Movie Clip</h2>
+      <h2>Favourite Movie Clip</h2>
       <iframe
         width="600"
         height="300"
@@ -98,13 +98,18 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-      <h2>Favorite Song</h2>
-      <audio controls>
-        <source src="resources/Ranam.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-
+      <h2>Favourite Song</h2>
+      <div class="song-container">
+        <img src="resources/ranam1.jpg" alt="Ranam" id="cover" />
+        <div class="song-details">
+          <p>Ranam Title Track</p>
+          <p>Jakes Bejoy</p>
+          <audio controls>
+            <source src="resources/Ranam.mp3" type="audio/mpeg" />
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+      </div>      
     <div class="footer-section">
       <p id="footer">&copy; Nandakrishnan G.D. All Rights Reserved</p>
     </div>
