--- a/per-page.html
+++ b/per-page.html
@@ -26,7 +26,8 @@
           id="profile-picture"
         />
       </a>
-      <h1>About Nandakrishnan G.D.</h1>
+      <h1>Nandakrishnan G.D.</h1>
+      <p>(Proficient in idk)</p>
       <button id="welcome-button">Click Me!</button>
     </div>
 
